Add titles to groups in the dkey jump selectbox #247
Previously, the "Jump to group..." dkey box simply said "Group 1" or
whatever. Now if you mouseover the "Group 1", the title tells you that
the group is "Lycophytes, Monilophytes". Also, the groups are now in
the right order; previously, "Group 10" was showing up before "Group 2".

--- a/gobotany/dkey/templates/dkey/page.html
+++ b/gobotany/dkey/templates/dkey/page.html
@@ -22,7 +22,7 @@
   <br><select class="jumpbox">
     <option value="instructions">Jump to a group…</option>
     {% for group in groups %}
-      <option>{{ group }}</option>
+      <option title="{{ group.text }}">{{ group.name }}</option>
     {% endfor %}
   </select><br><select class="jumpbox">
     <option value="instructions">Jump to a family…</option>
