Add the name PlantShare to 4 page titles where it was missing. (#235)

--- a/gobotany/plantshare/templates/registration/activation_complete.html
+++ b/gobotany/plantshare/templates/registration/activation_complete.html
@@ -1,6 +1,6 @@
 {% extends "gobotany/_page_free_sidebar.html" %}
 
-{% block title %}Activation Complete{% endblock %}
+{% block title %}Activation Complete: PlantShare{% endblock %}
 
 {% block body_attributes %}id="activation_complete" class="plantshare"{% endblock %}
 
