--- a/gobotany/plantshare/templates/registration/logout.html
+++ b/gobotany/plantshare/templates/registration/logout.html
@@ -1,6 +1,6 @@
 {% extends "gobotany/_page_free_sidebar.html" %}
 
-{% block title %}Logged Out{% endblock %}
+{% block title %}Logged Out: PlantShare{% endblock %}
 
 {% block body_attributes %}id="logged-out" class="plantshare"{% endblock %}
 
