--- a/gobotany/plantshare/templates/registration/registration_complete.html
+++ b/gobotany/plantshare/templates/registration/registration_complete.html
@@ -1,6 +1,6 @@
 {% extends "gobotany/_page_free_sidebar.html" %}
 
-{% block title %}Registration Complete{% endblock %}
+{% block title %}Registration Complete: PlantShare{% endblock %}
 
 {% block body_attributes %}id="complete" class="plantshare"{% endblock %}
 
