--- a/gobotany/static/css/site.css
+++ b/gobotany/static/css/site.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 /* *** Go Botany master styles file ***
  Please edit only the .scss source and use Compass to auto-generate the .css.
  The generated .css is kept in the repository to allow easy deployment.
@@ -517,10 +516,11 @@ body.plantshare#sign-up #main form input { width: 350px; }
 body.plantshare#sign-up #main form input.button { background: transparent url(../images/layout/plantshare-btns.png) no-repeat -1px -359px; border: 0; height: 41px; margin-top: 12px; width: 244px; display: block; text-indent: -9000px; }
 body.plantshare#sign-up #main form input.button:hover { background-position: -1px -402px; }
 body.plantshare#sign-up #main form input.button:active { background-position: -1px -444px; }
-body.plantshare#login-error ul.errorlist { padding: 16px 0; }
-body.plantshare#login-error form.login { padding-left: 0; }
-body.plantshare#login-error form.login label { font-size: 12px; }
-body.plantshare#login-error form.login input { border-color: #c3d941; }
+body.plantshare#log-in h1 + p { font-family: "Trebuchet MS", Helvetica, Arial, sans-serif; font-size: 14px; margin: 0; padding: 16px 0; }
+body.plantshare#log-in ul.errorlist { padding: 16px 0; }
+body.plantshare#log-in form.login { padding-left: 0; }
+body.plantshare#log-in form.login label { font-size: 12px; }
+body.plantshare#log-in form.login input { border-color: #c3d941; }
 body.plantshare#profile .info.box img { display: block; float: left; padding: 16px 16px 0 0; }
 body.plantshare#profile .info.box table { width: 85%; }
 body.plantshare #sidebar #login.box { background-color: #d3eaad; border-color: #508e31; padding: 0; }
