--- a/gobotany/simplekey/templates/simplekey/pilegroup.html
+++ b/gobotany/simplekey/templates/simplekey/pilegroup.html
@@ -79,9 +79,12 @@
                             {# Mockup for Issue #254 #}
                             {% if key == 'full' and forloop.counter > 1 %}
                                 {% if forloop.counter == 2 %}
-                                    <h3>Alternate-leaved other herbaceous, flowering dicots <span></span></h3>
+                                    <h3>Other herbaceous, flowering
+                                        plants with alternate leaves <span></span></h3>
                                 {% else %}
-                                    <h3>Non-alternate-leaved other herbaceous, flowering dicots <span></span></h3>
+                                    <h3>Other herbaceous, flowering
+                                        plants with opposite, whorled or
+                                        no leaves <span></span></h3>
                                 {% endif %}
                             {% else %}
                                 <h3>{{ pile.friendly_title|lower|capfirst }} <span>{{ pile.friendly_name|capfirst }}</span></h3>
@@ -92,16 +95,25 @@
                                 {# Mockup for Issue #254 #}
                                 {% if key == 'full' and forloop.counter > 1 %}
                                     {% if forloop.counter == 2 %}
-                                        Alternate leaves.
+                                        Alternate leaves (leaves joining the stem at different levels, not opposite each other or multiple leaves at a single node). This is a very diverse group of plants, but are generally not woody, grass-like, or aquatic, and do not have the composite flower heads of the aster family plants. Be sure to look at the arrangement of leaves in the lower half of the flowering stem.
                                     {% else %}
-                                        Opposite, basal, whorled, or no leaves.
+                                        Not alternate leaves. This very diverse group includes herbaceous plants with only basal leaves, opposite leaves, or whorled leaves and that aren’t aquatic, grasslike, or with the composite flower heads of aster family plants.  It also includes parasitic and other species that lack well-formed photosynthetic (green) leaves.
                                     {% endif %}
+                                {% else %}
+                                    {{ pile.key_characteristics|removetags:"div ul li"|safe }}
                                 {% endif %}
-                                {{ pile.key_characteristics|removetags:"div ul li"|safe }}
                             </p>
                             <p class="exceptions">
                                 <span class="section-title">Exceptions</span>
-                                {{ pile.notable_exceptions|removetags:"div ul li"|safe }}
+                                {# Mockup for Issue #254 #}
+                                {% if key == 'full' and forloop.counter > 1 %}
+                                    {% if forloop.counter == 2 %}
+                                        Leaf arrangement can vary from the bottom to top of the stem, or in young vs. older plants, so look at the leaves on the flowering stem of several plants, if possible. Some crowded leaves may look opposite or whorled, but look closely to see whether there is actually space between them on the stem. Some species have narrow leaves where it’s hard to see the veins (monocots have generally parallel veins), so look for other features such as petal number, presence of leaf teeth, etc.
+                                    {% else %}
+                                        Leaf arrangement can vary from the bottom to top of the stem, or in young vs. older plants, so look at the leaves on the flowering stem of several plants, if possible. Some crowded leaves may look opposite or whorled, but look closely to see whether there is actually space between them on the stem. Some species have narrow leaves where it’s hard to see the veins (monocots have generally parallel veins), so look for other features such as petal number, presence of leaf teeth, etc. Some species (teasel, Dipsacus spp.) have flower heads that look like asters, but look carefully; they’re not composites with two different kinds of flowers.                                                      {% endif %}
+                                {% else %}
+                                    {{ pile.notable_exceptions|removetags:"div ul li"|safe }}
+                                {% endif %}
                             </p>
                             {% if pile.youtube_id %}
                             <p class="vid">
