--- a/gobotany/static/sass/_plantshare.scss
+++ b/gobotany/static/sass/_plantshare.scss
@@ -151,6 +151,33 @@ body.plantshare {
             }
         }
     }
+    &#new-sighting {
+        h1 + div {
+            background: #fff;
+            border: 1px solid $border-green;
+            margin-bottom: $section-padding;
+            padding: 5px $section-padding;
+        }
+        form {
+            label {
+                text-transform: none;
+            }
+            fieldset {
+                margin: $section-padding 0;
+            }
+            .post-sighting-btn {
+                background: transparent url(/static/images/layout/plantshare2-btn.png) no-repeat -372px -634px;
+                border: 0 none;
+                display: block;
+                width: 157px;
+                height: 32px;
+                text-indent: -9999px;
+                &.inactive {
+                    background-position: -372px -599px;
+                }
+            }                
+        }
+    }
     &#profile {
         .info.box {
             img {
