--- a/gobotany/plantshare/templates/new_sighting.html
+++ b/gobotany/plantshare/templates/new_sighting.html
@@ -18,7 +18,9 @@
     <p>* = Required</p>
 </div>
 
-{% include "_sighting_form.html" %}
+<form method="post" action="{% url ps-new-sighting %}">
+    {% include "_sighting_form.html" %}
+</form>
 
 {% endblock %}
 
