Relocate CSS hook for styling the sighting form.
This way the styled form can be reused on a future page for editing
an existing sighting. (#235)

--- a/gobotany/plantshare/templates/new_sighting.html
+++ b/gobotany/plantshare/templates/new_sighting.html
@@ -2,7 +2,7 @@
 
 {% block title %}Post a Sighting: PlantShare{% endblock %}
 
-{% block body_attributes %}id="new-sighting" class="plantshare"{% endblock %}
+{% block body_attributes %}id="new-sighting" class="plantshare sighting"{% endblock %}
 
 {% block main_content %}
 <h1>Post a Sighting</h1>
