--- a/gobotany/static/sass/_plantshare.scss
+++ b/gobotany/static/sass/_plantshare.scss
@@ -172,6 +172,8 @@ body.plantshare {
             margin-bottom: $section-padding;
             padding: 5px $section-padding;
         }
+    }
+    &.sighting {
         form {
             label {
                 text-transform: none;
