--- a/gobotany/static/css/site.css
+++ b/gobotany/static/css/site.css
@@ -524,12 +524,12 @@ body.plantshare#log-in form.login { padding-left: 0; }
 body.plantshare#log-in form.login label { font-size: 12px; }
 body.plantshare#log-in form.login input { border-color: #c3d941; }
 body.plantshare#new-sighting h1 + div { background: #fff; border: 1px solid #c3d941; margin-bottom: 16px; padding: 5px 16px; }
-body.plantshare#new-sighting form label { text-transform: none; }
-body.plantshare#new-sighting form fieldset { border: 0; margin: 0 0 16px; padding: 0; }
-body.plantshare#new-sighting form fieldset legend { display: block; text-indent: -9000px; }
-body.plantshare#new-sighting form img { float: right; padding-top: 19px; }
-body.plantshare#new-sighting form .post-sighting-btn { background: transparent url(/static/images/layout/plantshare2-btn.png) no-repeat -372px -634px; border: 0 none; display: block; width: 157px; height: 32px; text-indent: -9999px; }
-body.plantshare#new-sighting form .post-sighting-btn.inactive { background-position: -372px -599px; }
+body.plantshare.sighting form label { text-transform: none; }
+body.plantshare.sighting form fieldset { border: 0; margin: 0 0 16px; padding: 0; }
+body.plantshare.sighting form fieldset legend { display: block; text-indent: -9000px; }
+body.plantshare.sighting form img { float: right; padding-top: 19px; }
+body.plantshare.sighting form .post-sighting-btn { background: transparent url(/static/images/layout/plantshare2-btn.png) no-repeat -372px -634px; border: 0 none; display: block; width: 157px; height: 32px; text-indent: -9999px; }
+body.plantshare.sighting form .post-sighting-btn.inactive { background-position: -372px -599px; }
 body.plantshare#profile .info.box img { display: block; float: left; padding: 16px 16px 0 0; }
 body.plantshare#profile .info.box table { width: 85%; }
 body.plantshare #sidebar #login.box { background-color: #d3eaad; border-color: #508e31; padding: 0; }
