--- a/gobotany/static/css/site.css
+++ b/gobotany/static/css/site.css
@@ -490,7 +490,6 @@ body.plantshare .content form p { margin: 0; }
 body.plantshare .content form label { display: inline-block; margin-bottom: 4px; text-transform: uppercase; width: 350px; }
 body.plantshare .content form input { font-family: Verdana, Geneva, sans-serif; height: 16px; margin-bottom: 10px; border: 1px solid #c3d941; padding: 5px; width: 350px; }
 body.plantshare .content form textarea { height: 72px; border: 1px solid #c3d941; padding: 5px; width: 350px; }
-body.plantshare .content form fieldset { width: 534px; }
 body.plantshare .box { background-color: #fff; border: 1px solid #c3d941; padding: 4px 16px; }
 body.plantshare .box table { margin: 16px 0 12px; width: 100%; }
 body.plantshare .box table tr:nth-child(odd) { background-color: #e1f0d1; }
@@ -525,9 +524,9 @@ body.plantshare#log-in form.login label { font-size: 12px; }
 body.plantshare#log-in form.login input { border-color: #c3d941; }
 body.plantshare#new-sighting h1 + div { background: #fff; border: 1px solid #c3d941; margin-bottom: 16px; padding: 5px 16px; }
 body.plantshare.sighting form label { text-transform: none; }
-body.plantshare.sighting form fieldset { border: 0; margin: 0 0 16px; padding: 0; }
+body.plantshare.sighting form fieldset { border: 0; margin: 0 0 16px; padding: 0; width: 534px; }
 body.plantshare.sighting form fieldset legend { display: block; text-indent: -9000px; }
-body.plantshare.sighting form img { float: right; padding-top: 19px; }
+body.plantshare.sighting form img { border: 1px solid #c3d941; float: right; }
 body.plantshare.sighting form .post-sighting-btn { background: transparent url(/static/images/layout/plantshare2-btn.png) no-repeat -372px -634px; border: 0 none; display: block; width: 157px; height: 32px; text-indent: -9999px; }
 body.plantshare.sighting form .post-sighting-btn.inactive { background-position: -372px -599px; }
 body.plantshare#profile .info.box img { display: block; float: left; padding: 16px 16px 0 0; }
@@ -538,7 +537,8 @@ body.plantshare #sidebar #login.box div { border-top: 1px solid #508e31; padding
 
 /* Begin media queries styles for PlantShare. */
 /* Portrait-orientation styles */
-@media only screen and (max-width: 400px) { body.plantshare .box { width: 302px; } }
+@media only screen and (max-width: 400px) { body.plantshare .box { width: 302px; }
+  body.plantshare .content form label, body.plantshare .content form input, body.plantshare .content form textarea { width: 292px; } }
 /* Landscape-orientation styles */
 @media only screen and (min-width: 401px) and (max-width: 600px) { body.plantshare .box { width: 462px; } }
 /* These styles are common to both smartphone widths */
@@ -548,6 +548,8 @@ body.plantshare #sidebar #login.box div { border-top: 1px solid #508e31; padding
   body.plantshare .content #sidebar { background: none; border: 0; }
   body.plantshare#plantshare .sign-up-call { width: auto; }
   body.plantshare#plantshare .sign-up-call ul { margin-left: 0; }
+  body.plantshare.sighting form fieldset { width: auto; }
+  body.plantshare.sighting form .location img { display: block; float: none; margin-bottom: 10px; }
   body.plantshare#profile .info.box img { padding: 16px; }
   body.plantshare#sign-up #main form input { width: 290px; } }
 /* These styles apply to smartphones and tablets */
