Reorganize and improve the views for adding a sighting.
Go for a more RESTful approach where a new sighting is POSTed
to the collections URL rather than its form URL. (#235)

--- a/gobotany/plantshare/templates/new_sighting.html
+++ b/gobotany/plantshare/templates/new_sighting.html
@@ -18,7 +18,7 @@
     <p>* = Required</p>
 </div>
 
-<form method="post" action="{% url ps-new-sighting %}">
+<form method="post" action="{% url ps-sightings %}">
     {% include "_sighting_form.html" %}
 </form>
 
