--- a/gobotany/static/sass/_plantshare.scss
+++ b/gobotany/static/sass/_plantshare.scss
@@ -16,7 +16,7 @@ body.plantshare {
             margin: 0;
         }
         label {
-            display: inline-block;
+            display: block;
             margin-bottom: 4px;
             text-transform: uppercase;
             width: $form-field-width;
