--- a/gobotany/static/css/styles.css
+++ b/gobotany/static/css/styles.css
@@ -1094,11 +1094,13 @@ div.section.namap div.trans { /* Transparent div to make North America map objec
 /* Search results styles */
 #search-results sidebar { height: 515px; }
 
-#search-results-list { border-top: 1px solid #e1e1dc; margin: 15px 0 13px; padding: 6px 0 0; }
+#search-results #main h2 + p { margin-top: 12px; }
+
+#search-results-list { margin: 6px 0 13px; padding: 6px 0 0; }
 
 #search-results-list .highlighted { font-weight: bold; }
 
-#search-results-list li { border-bottom: 1px solid #e1e1dc; padding: 6px 0 10px; }
+#search-results-list li { padding: 6px 0 10px; }
 
 #search-results-list li img { float: left; margin: -1px 10px 0; vertical-align: middle; }
 
