Redirect to the requested PlantShare page upon login.
Prior to this the user was always redirected to the main PlantShare
page, but now they are redirected to the page they just tried
to access. (#235)

--- a/gobotany/plantshare/templates/_login_form.html
+++ b/gobotany/plantshare/templates/_login_form.html
@@ -11,6 +11,6 @@
         <label for="id_password">Password</label>
         <input type="password" name="password" id="id_password" />
         <input type="submit" class="button" value="Login">
-        <input type="hidden" name="next" value="{% url ps-main %}" />
+        <input type="hidden" name="next" value="{{ next }}" />
     </form>
 
