Correct the font for textareas in PlantShare forms. (#235)

--- a/gobotany/static/sass/_plantshare.scss
+++ b/gobotany/static/sass/_plantshare.scss
@@ -28,6 +28,7 @@ body.plantshare {
             @include form-field-base;
         }
         textarea {
+            font-family: $body-font;
             height: 72px;
             @include form-field-base;
         }
