--- a/gobotany/plantshare/templates/_login_form.html
+++ b/gobotany/plantshare/templates/_login_form.html
@@ -7,10 +7,10 @@
         view or create a context processor for it.
         {% endcomment %}
         <label for="id_username">Username</label>
-        <input id="id_username" type="text" name="username" maxlength="30" />
+        <input id="id_username" type="text" name="username" maxlength="30">
         <label for="id_password">Password</label>
-        <input type="password" name="password" id="id_password" />
+        <input type="password" name="password" id="id_password">
         <input type="submit" class="button" value="Login">
-        <input type="hidden" name="next" value="{{ next }}" />
+        <input type="hidden" name="next" value="{{ next }}">
     </form>
 
